--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,15 @@ h5,
 h6 {
   font-family: "Nunito", sans-serif;
 }
-
+.headingss{
+  margin-right: 185px;
+  color: #012970;
+}
+.add-btn{
+  background-color: #3e4f6f;
+  outline: #012970;
+  border: solid 1px #3e4f6f;
+}
 /*--------------------------------------------------------------
 # Main
 --------------------------------------------------------------*/
